# EndfieldGachaHelper

./: .gitignore  .prettierignore  .prettierrc.json  Design.md  LICENSE  README.en.md  README.ja.md  README.md  package-lock.json  package.json  tsconfig.base.json
apps/api/: .env.example  eslint.config.js  eslint.config.mjs  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/api/prisma/: schema.prisma
apps/api/prisma/migrations/20260124124622_init/: migration.sql
apps/api/prisma/migrations/20260124175106_init/: migration.sql
apps/api/scripts/: dev.mjs  prisma-generate.mjs
apps/api/src/: main.ts
apps/api/src/modules/: app.module.ts
apps/api/src/modules/auth/: auth.controller.ts  auth.guard.ts  (+5 more)
apps/api/src/types/: fastify.d.ts
apps/desktop/: .env.example  eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src/: env.d.ts  main.tsx
apps/desktop/src-tauri/: Cargo.toml  endfield-gacha-2026-01-24.endfieldgacha.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json  tray-menu.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/hooks/: useAppInfo.ts  useEndfield.ts  useInteractionLock.ts  useLeaderboard.ts  useSync.ts  useTray.ts  useUpdater.ts
apps/desktop/src/i18n/: index.ts
apps/desktop/src/lib/: dateUtils.ts  db.ts  leaderboardApi.ts  poolUtils.ts  storage.ts  syncApi.ts  tauriHttp.ts
apps/desktop/src/ui/: App.tsx  theme.ts
infra/mysql/: README.md
infra/mysql/init/: 01-create-db.sql
(+105 files in other folders)
